vlib/v/checker/tests/unwrapped_optional_infix.vv
fn test() ?string {
	return ""
}

println(test() == "")
